@@ -276,11 +276,14 @@ main(int argc, char* argv[])
 	for (; optind < argc-1 ; optind++) {
 		char *imageCursor = argv[optind];
 		in = openSrcImage (&imageCursor);
-		if (in == NULL)
+		if (in == NULL) {
+			(void) TIFFClose(out);
 			return (-3);
+		}
 		if (diroff != 0 && !TIFFSetSubDirectory(in, diroff)) {
 			TIFFError(TIFFFileName(in),
 			    "Error, setting subdirectory at " TIFF_UINT64_FORMAT, diroff);
+			(void) TIFFClose(in);
 			(void) TIFFClose(out);
 			return (1);
 		}
@@ -294,7 +297,8 @@ main(int argc, char* argv[])
 			tilelength = deftilelength;
 			g3opts = defg3opts;
 			if (!tiffcp(in, out) || !TIFFWriteDirectory(out)) {
-				TIFFClose(out);
+				(void) TIFFClose(in);
+				(void) TIFFClose(out);
 				return (1);
 			}
 			if (imageCursor) { /* seek next image directory */
@@ -302,10 +306,10 @@ main(int argc, char* argv[])
 			}else
 				if (!TIFFReadDirectory(in)) break;
 		}
-		TIFFClose(in);
+		(void) TIFFClose(in);
 	}
 
-	TIFFClose(out);
+	(void) TIFFClose(out);
 	return (0);
 }
 
